--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,38 +1,20 @@
 ---
-- name: update web and nfs servers
-  hosts: webservers, nfs
+- name: update web, nfs and db servers
+  hosts: webservers, nfs, db
+  remote_user: ec2-user
   become: yes
+  become_user: root
   tasks:
     - name: ensure wireshark is at the latest version
       yum:
         name: wireshark
         state: latest
 
-    - name: create a directory
-      file:
-        path: /path/to/directory
-        state: directory
-        mode: '0755'
-
-    - name: add a file into the directory
-      copy:
-        content: "This is a sample file content"
-        dest: /path/to/directory/samplefile.txt
-        mode: '0644'
-
-    - name: set timezone to UTC
-      timezone:
-        name: UTC
-
-    - name: run a shell script
-      shell: |
-        #!/bin/bash
-        echo "This is a shell script"
-        echo "Executed on $(date)" >> /path/to/directory/script_output.txt
-
-- name: update LB and db servers
-  hosts: lb, db
+- name: update LB server
+  hosts: lb
+  remote_user: ubuntu
   become: yes
+  become_user: root
   tasks:
     - name: Update apt repo
       apt:
@@ -42,25 +24,3 @@
       apt:
         name: wireshark
         state: latest
-
-    - name: create a directory
-      file:
-        path: /path/to/directory
-        state: directory
-        mode: '0755'
-
-    - name: add a file into the directory
-      copy:
-        content: "This is a sample file content"
-        dest: /path/to/directory/samplefile.txt
-        mode: '0644'
-
-    - name: set timezone to UTC
-      timezone:
-        name: UTC
-
-    - name: run a shell script
-      shell: |
-        #!/bin/bash
-        echo "This is a shell script"
-        echo "Executed on $(date)" >> /path/to/directory/script_output.txt
