--- a/playbooks/common.yml
+++ b/playbooks/common.yml
@@ -1,6 +1,6 @@
 ---
 - name: update web, nfs and db servers
-  hosts: webservers, nfs, db
+  hosts: webservers, nfs
   remote_user: ec2-user
   become: yes
   become_user: root
@@ -12,7 +12,7 @@
 
 
 - name: update LB server
-  hosts: lb
+  hosts: lb, db
   remote_user: ubuntu
   become: yes
   become_user: root
