--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -6,7 +6,9 @@
 
 ---
 #- hosts: all
-#- import_playbook: ../static-assignments/common.yml
+  #- import_playbook: ../static-assignments/common.yml
 
 - hosts: uat-webservers
 - import_playbook: ../static-assignments/uat-webservers.yml
+
+- import_playbook: ../static-assignments/db-servers.yml
