--- a/inventory/uat.yml
+++ b/inventory/uat.yml
@@ -1,3 +1,11 @@
 [uat-webservers]
 172.31.11.6 ansible_ssh_user='ec2-user'
 172.31.11.238 ansible_ssh_user='ec2-user'
+
+
+[lb]
+172.31.14.73 ansible_ssh_user='ec2-user'
+
+
+[db-server]
+172.31.2.43 ansible_ssh_user='ubuntu'
