--- a/roles/nginx/defaults/main.yml
+++ b/roles/nginx/defaults/main.yml
@@ -94,3 +94,37 @@ nginx_log_format: |-
   '$remote_addr - $remote_user [$time_local] "$request" '
   '$status $body_bytes_sent "$http_referer" '
   '"$http_user_agent" "$http_x_forwarded_for"'
+
+
+
+nginx_vhosts:
+ - listen: "80" # default: "80"
+    server_name: "example.com" 
+    server_name_redirect: "example.com"
+    root: "/var/www/html" 
+    index: "index.php index.html index.htm" # default: "index.html index.htm"
+
+# filename: "nginx.conf" # Can be used to set the vhost filename.
+                   
+    locations:
+      - path: "/"
+        proxy_pass: "http://myapp1"
+                   
+# Properties that are only added if defined:
+    server_name_redirect: "www.example.com" # default: N/A
+    error_page: ""
+    access_log: ""
+    error_log: ""
+    extra_parameters: "" # Can be used to add extra config blocks (multiline).
+    template: "{{ nginx_vhost_template }}" # Can be used to override the `nginx_vhost_template` per host.
+    state: "present" # To remove the vhost configuration.
+
+
+
+nginx_upstreams: 
+- name: myapp1
+  strategy: "ip_hash" # "least_conn", etc.
+  keepalive: 16 # optional
+  servers:
+    - "172.31.11.6 weight=5"
+    - "172.31.11.238 weight=5"
