--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,14 +1,19 @@
 pipeline {
-
-        agent any
-
-        stages{
-            stage ('Build') {
-                steps {
+    agent any
+    stages {
+        stage('Build') {
+            steps {
+                script {
                     sh 'echo "Building Stage"'
                 }
             }
-
         }
-
+        stage('Test') {
+            steps {
+                script {
+                    sh 'echo "Testing Stage"'
+                }
+            }
+        }
+    }
 }
