--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,70 +1,70 @@
 pipeline {
-  agent any
+    agent any
 
-  environment {
-    ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
-    ANSIBLE_HOST_KEY_CHECKING = 'False'
-  }
-
-  stages {
-    stage("Initial cleanup") {
-      steps {
-        dir("${WORKSPACE}") {
-          deleteDir()
-        }
-      }
+    environment {
+        ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
     }
 
-    stage('Checkout SCM') {
-      steps {
-        git branch: 'main', url: 'https://github.com/ksal1235/ansible-project.git'
-      }
-    }
-
-    stage('Prepare Ansible For Execution') {
-      steps {
-        sh 'echo ${WORKSPACE}'
-        sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
-      }
-    }
-
-    stage('Test SSH Connections') {
-      steps {
-        script {
-          def hosts = [
-            [group: 'tooling', ip: '172.31.5.211', user: 'ec2-user'],
-            [group: 'tooling', ip: '172.31.10.184', user: 'ec2-user'],
-            [group: 'nginx', ip: '172.31.26.108', user: 'ubuntu'],
-            [group: 'db', ip: '172.31.7.100', user: 'ubuntu']
-          ]
-          for (host in hosts) {
-            sshagent(['private-key']) {
-              sh "ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/key.pem ${host.user}@${host.ip} exit"
+    stages {
+        stage('Initial cleanup') {
+            steps {
+                dir("${WORKSPACE}") {
+                    deleteDir()
+                }
             }
-          }
         }
-      }
-    }
 
-    stage('Run Ansible playbook') {
-      steps {
-        sshagent(['private-key']) {
-          ansiblePlaybook(
-            become: true,
-            credentialsId: 'private-key',
-            disableHostKeyChecking: true,
-            installation: 'ansible',
-            inventory: "${WORKSPACE}/inventory/dev.yml",
-            playbook: "${WORKSPACE}/playbooks/site.yml"
-          )
+        stage('Checkout SCM') {
+            steps {
+                git branch: 'main', url: 'https://github.com/ksal1235/ansible-project.git'
+            }
         }
-      }
-    }
 
-    stage('Clean Workspace after build') {
-      steps {
-        cleanWs(cleanWhenAborted: true, cleanWhenFailure: true, cleanWhenNotBuilt: true, cleanWhenUnstable: true, deleteDirs: true)
-      }
+        stage('Prepare Ansible For Execution') {
+            steps {
+                sh 'echo ${WORKSPACE}'
+                sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
+            }
+        }
+
+        stage('Test SSH Connections') {
+            steps {
+                script {
+                    def allHosts = [
+                        'ubuntu@172.31.5.211',
+                        'ubuntu@172.31.7.100',
+                        'ec2-user@172.31.10.184',
+                        'ec2-user@172.31.5.211'
+                    ]
+
+                    sshagent(['private-key']) {
+                        allHosts.each { host ->
+                            sh "ssh -o StrictHostKeyChecking=no ${host} exit"
+                        }
+                    }
+                }
+            }
+        }
+
+        stage('Run Ansible playbook') {
+            steps {
+                sshagent(['private-key']) {
+                    ansiblePlaybook(
+                        become: true,
+                        credentialsId: 'private-key',
+                        disableHostKeyChecking: true,
+                        installation: 'ansible',
+                        inventory: '${WORKSPACE}/inventory/dev.yml',
+                        playbook: '${WORKSPACE}/playbooks/site.yml'
+                    )
+                }
+            }
+        }
+
+        stage('Clean Workspace after build') {
+            steps {
+                cleanWs(cleanWhenAborted: true, cleanWhenFailure: true, cleanWhenNotBuilt: true, cleanWhenUnstable: true, deleteDirs: true)
+            }
+        }
     }
-  }
 }
