--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -7,7 +7,7 @@
       tags:
         - always
 
-- import_playbook: ../static-assignments/common.yml
+## - import_playbook: ../static-assignments/common.yml
 - import_playbook: ../static-assignments/uat_webservers.yml
 - import_playbook: ../static-assignments/loadbalancers.yml
 - import_playbook: ../static-assignments/db-servers.yml
