--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -26,26 +26,24 @@ pipeline {
                 sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
             }
         }
-
         stage('Test SSH Connections') {
             steps {
                 script {
-                    def allHosts = [
-                        'ubuntu@172.31.8.66',
-                        'ubuntu@172.31.7.100',
-                        'ec2-user@172.31.10.184',
-                        'ec2-user@172.31.5.211'
+                    def hosts = [
+                        [group: 'tooling', ip: '172.31.5.211', user: 'ec2-user'],
+                        [group: 'todo', ip: '172.31.10.184', user: 'ec2-user'],
+                        [group: 'nginx', ip: '172.31.8.66', user: 'ubuntu'],
+                        [group: 'db', ip: '172.31.7.100', user: 'ubuntu']
                     ]
-
-                    sshagent(['private-key']) {
-                        allHosts.each { host ->
-                            sh "ssh -o StrictHostKeyChecking=no ${host} exit"
+                    
+                    sshagent(['private-key']) {  // 'private-key' is the Jenkins Credential ID for your SSH key
+                        for (host in hosts) {
+                            sh "ssh -o StrictHostKeyChecking=no ${host.user}@${host.ip} exit"
                         }
                     }
                 }
             }
         }
-
         stage('Run Ansible playbook') {
             steps {
                 sshagent(['private-key']) {
