--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,5 +1,5 @@
 [tooling]
-172.31.5.211
+172.31.5.211 
 
 [todo]
 172.31.10.184
@@ -8,7 +8,7 @@
 172.31.8.66
 
 [db:vars]
-ansible_user=ec2-user
+ansible_user=ubuntu
 ansible_python_interpreter=/usr/bin/python
 
 [db]
