--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,15 +1,15 @@
 [tooling]
-172.31.5.211 
+172.31.5.211  ansible_ssh_user=ec2-user
 
 [todo]
-172.31.10.184
+172.31.10.184  ansible_ssh_user=ec2-user
 
 [nginx]
-172.31.8.66
+172.31.8.66  ansible_ssh_user=ubuntu
 
 [db:vars]
 ansible_user=ubuntu
 ansible_python_interpreter=/usr/bin/python
 
 [db]
-172.31.7.100
+172.31.7.100  ansible_ssh_user=ubuntu
