--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -14,6 +14,7 @@ transport      = smart
 remote_port    = 22
 module_lang    = C
 module_set_locale = False
+deprecation_warnings=False
 
 [privilege_escalation]
 become=True
