--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -15,6 +15,7 @@ remote_port    = 22
 module_lang    = C
 module_set_locale = False
 deprecation_warnings=False
+connection = ssh
 
 [privilege_escalation]
 become=True
