--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -1,5 +1,5 @@
 - name: Install Apache
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.yum:
@@ -7,7 +7,7 @@
       state: present
 
 - name: Install Git
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.yum:
@@ -15,35 +15,35 @@
      state: present
 
 - name: Install EPEL release
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.command:
      cmd: sudo dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm -y
 
 - name: Install dnf-utils and Remi repository
-   remote_user: ec2-user
+  # remote_user: ec2-user
    become: true
    become_user: root
    ansible.builtin.command:
      cmd: sudo dnf install dnf-utils http://rpms.remirepo.net/enterprise/remi-release-9.rpm -y
 
 - name: Reset PHP module
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.command:
      cmd: sudo dnf module reset php -y
 
 - name: Enable PHP 7.4 module
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.command:
      cmd: sudo dnf module enable php:remi-7.4 -y
 
 - name: Install PHP and extensions
-  remote_user: ec2-user
+ # remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.yum:
@@ -56,7 +56,7 @@
    state: present
 
 - name: Install MySQL client
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.yum:
@@ -64,7 +64,7 @@
    state: present
 
 - name: Start PHP-FPM service
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.service:
@@ -72,7 +72,7 @@
     state: started
 
 - name: Enable PHP-FPM service
-  remote_user: ec2-user
+  #remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.service:
@@ -80,14 +80,14 @@
    enabled: true
 
 - name: Set SELinux boolean for httpd_execmem
-  remote_user: ec2-user
+ # remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.command:
    cmd: sudo setsebool -P httpd_execmem 1
 
 - name: Clone a repo
-  remote_user: ec2-user
+#  remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.git:
@@ -96,13 +96,13 @@
    force: yes
 
 - name: Copy HTML content to one level up
-  remote_user: ec2-user
+ # remote_user: ec2-user
   become: true
   become_user: root
    command: cp -r /var/www/html/html/ /var/www/
 
 - name: Start httpd service, if not started
-  remote_user: ec2-user
+ # remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.service:
@@ -110,7 +110,7 @@
    state: started
 
 - name: Recursively remove /var/www/html/html directory
-  remote_user: ec2-user
+ # remote_user: ec2-user
   become: true
   become_user: root
   ansible.builtin.file:
