--- a/roles/webserver/tasks/main.yml
+++ b/roles/webserver/tasks/main.yml
@@ -1,44 +1,51 @@
 ---
-# Install Apache
-- name: Install Apache
+- name: install apache
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.yum:
-    name: httpd
+    name: "httpd"
     state: present
 
-# Install EPEL release
+- name: Enable apache
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.command:
+    cmd: sudo systemctl enable httpd
+
 - name: Install EPEL release
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.command:
     cmd: sudo dnf install https://dl.fedoraproject.org/pub/epel/epel-release-latest-9.noarch.rpm -y
 
-# Install dnf-utils and Remi repository
 - name: Install dnf-utils and Remi repository
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.command:
     cmd: sudo dnf install dnf-utils http://rpms.remirepo.net/enterprise/remi-release-9.rpm -y
 
-# Reset PHP module
 - name: Reset PHP module
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.command:
-    cmd: sudo dnf module install php:remi-7.4 -y
+    cmd: sudo dnf module reset php -y
 
-# Enable PHP 7.4 module
-- name: Enable PHP 7.4 module
+- name: Enable PHP 8.2 module
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.command:
-    cmd: sudo dnf module enable php:remi-7.4 -y
+    cmd: sudo dnf module enable php:remi-8.2 -y
 
-# Install PHP and extensions
 - name: Install PHP and extensions
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.yum:
     name:
       - php
@@ -46,120 +53,76 @@
       - php-gd
       - php-curl
       - php-mysqlnd
-      - php-common
-      - php-mbstring
-      - php-intl
-      - php-xml
-      - php-fpm
-      - php-json
     state: present
-    enablerepo: remi-7.4
 
-# Start PHP-FPM service
+- name: Install MySQL client
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.yum:
+    name: "mysql"
+    state: present
+
 - name: Start PHP-FPM service
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.service:
     name: php-fpm
     state: started
 
-# Enable PHP-FPM service
 - name: Enable PHP-FPM service
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.service:
     name: php-fpm
     enabled: true
 
-# Set SELinux boolean for httpd_execmem
-- name: Set SELinux boolean for httpd_execmem
+- name: Set SELinux policies for web servers
   remote_user: ec2-user
   become: true
+  become_user: root
   ansible.builtin.command:
     cmd: sudo setsebool -P httpd_execmem 1
+    cmd: sudo setsebool -P httpd_can_network_connect=1
+    cmd: sudo setsebool -P httpd_can_network_connect_db=1
 
-# Start httpd service, if not started
-- name: Start httpd service, if not started
+- name: install git
   remote_user: ec2-user
   become: true
+  become_user: root
+  ansible.builtin.yum:
+    name: "git"
+    state: present
+
+- name: clone a repo
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  ansible.builtin.git:
+    repo: https://github.com/francdomain/tooling.git
+    dest: /var/www/html
+    force: yes
+
+- name: copy html content to one level up
+  remote_user: ec2-user
+  become: true
+  become_user: root
+  command: cp -r /var/www/html/html/ /var/www/
+
+- name: Start service httpd, if not started
+  remote_user: ec2-user
+  become: true
+  become_user: root
   ansible.builtin.service:
     name: httpd
     state: started
 
-# Download the artifact
-- name: Download the artifact
+- name: recursively remove /var/www/html/html/ directory
   remote_user: ec2-user
   become: true
-  ansible.builtin.get_url:
-    url: http://3.76.225.235:8082/artifactory/Todo-dev/php-todo.zip
-    dest: /home/ec2-user/php-todo.zip
-    url_username: admin
-    url_password: guessWhat232@
-
-# Unzip the artifacts
-- name: Unzip the artifacts
-  ansible.builtin.unarchive:
-    src: /home/ec2-user/php-todo.zip
-    dest: /home/ec2-user/
-    remote_src: yes
-  become: true
-
-# Run chmod on /var/www/html
-- name: Run chmod on /var/www/html
-  ansible.builtin.command:
-    cmd: sudo chown -R $USER:$USER /var/www/html
-  become: true
-
-# Deploy the code
-- name: Deploy the code
-  remote_user: ec2-user
-  become: true
-  ansible.builtin.copy:
-    src:  /home/ec2-user/var/lib/jenkins/workspace/php-pipeline/.
-    dest: /var/www/html/
-    force: yes
-    remote_src: yes
-
-# Delete the zip file after unzipping
-- name: Delete the zip file after unzipping
+  become_user: root
   ansible.builtin.file:
-    path: /home/ec2-user/php-todo.zip
+    path: /var/www/html/html
     state: absent
-  become: true
-
-# Delete the unzipped files after copying
-- name: Delete the unzipped files after copying
-  ansible.builtin.file:
-    path: /home/ec2-user/php-todo/
-    state: absent
-  become: true
-
-# Remove nginx default page
-- name: Remove nginx default page
-  remote_user: ec2-user
-  become: true
-  ansible.builtin.file:
-    path: /etc/httpd/conf.d/welcome.conf
-    state: absent
-
-# Restart httpd
-- name: Restart httpd
-  remote_user: ec2-user
-  become: true
-  ansible.builtin.service:
-    name: httpd
-    state: restarted
-
-# Verify PHP version
-- name: Verify PHP version
-  remote_user: ec2-user
-  become: true
-  ansible.builtin.command: php -v
-  register: php_version
-
-# Display PHP version
-- name: Display PHP version
-  remote_user: ec2-user
-  become: true
-  ansible.builtin.debug:
-    msg: "{{ php_version.stdout }}"
