--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -8,7 +8,7 @@
 172.31.8.66  ansible_ssh_user=ubuntu
 
 [db:vars]
-ansible_user=ubuntu
+ansible_user=ec2-user
 ansible_python_interpreter=/usr/bin/python
 
 [db]
