--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -32,7 +32,8 @@ pipeline {
                 script {
                     def allHosts = [
                         'ubuntu@172.31.8.66',
-                        'ec2-user@172.31.5.211'
+                        'ec2-user@172.31.5.211',
+                        'ubuntu@172.31.7.100'
                         
                     ]
 
