--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -4,6 +4,11 @@ pipeline {
     environment {
         ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
     }
+    
+    parameters {
+      string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy
+      configuration')
+    }
 
     stages {
         stage('Initial cleanup') {
@@ -54,7 +59,7 @@ pipeline {
                         credentialsId: 'private-key',
                         disableHostKeyChecking: true,
                         installation: 'ansible',
-                        inventory: '${WORKSPACE}/inventory/dev.yml',
+                        inventory: '${WORKSPACE}/inventory/${inventory}',
                         playbook: '${WORKSPACE}/playbooks/site.yml'
                     )
                 }
