--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -2,9 +2,9 @@ pipeline {
     agent any
 
     parameters {
-      string(name: 'inventory', defaultValue: 'dev',  description: 'This is the inventory file for the environment to deploy
-      configuration')
+    string(name: 'inventory', defaultValue: 'dev', description: '''This is the inventory file for the environment to deploy configuration''')
     }
+    
     environment {
         ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
     }
