--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,75 +1,13 @@
 pipeline {
     agent any
 
-    parameters {
-        string(name: 'inventory', defaultValue: 'dev', description: '''This is the inventory file for the environment to deploy configuration''')
-        string(name: 'ansible_tags', defaultValue: 'webserver', description: '''Ansible tags to run specific roles or tasks''')   
+  stages {
+    stage('Build') {
+      steps {
+        script {
+          sh 'echo "Building Stage"'
+        }
+      }
     }
-
-    environment {
-        ANSIBLE_CONFIG = "${WORKSPACE}/deploy/ansible.cfg"
-    }
-    
-
-    stages {
-        stage('Initial cleanup') {
-            steps {
-                dir("${WORKSPACE}") {
-                    deleteDir()
-                }
-            }
-        }
-
-        stage('Checkout SCM') {
-            steps {
-                git branch: 'main', url: 'https://github.com/ksal1235/ansible-project.git'
-            }
-        }
-
-        stage('Prepare Ansible For Execution') {
-            steps {
-                sh 'echo ${WORKSPACE}'
-                sh 'sed -i "3 a roles_path=${WORKSPACE}/roles" ${WORKSPACE}/deploy/ansible.cfg'
-            }
-        }
-
-        stage('Test SSH Connections') {
-            steps {
-                script {
-                    def allHosts = [
-                        'ubuntu@172.31.8.66',
-                        'ec2-user@172.31.5.211',
-                        'ubuntu@172.31.7.100'
-                    ]
-
-                    sshagent(['private-key']) {
-                        allHosts.each { host ->
-                            sh "ssh -o StrictHostKeyChecking=no ${host} exit"
-                        }
-                    }
-                }
-            }
-        }
-
-        stage('Run Ansible playbook') {
-            steps {
-                sshagent(['private-key']) {
-                    ansiblePlaybook(
-                        become: true,
-                        credentialsId: 'private-key',
-                        disableHostKeyChecking: true,
-                        installation: 'ansible',
-                        inventory: '${WORKSPACE}/inventory/${inventory}',
-                        playbook: '${WORKSPACE}/playbooks/site.yml'
-                    )
-                }
-            }
-        }
-
-        stage('Clean Workspace after build') {
-            steps {
-                cleanWs(cleanWhenAborted: true, cleanWhenFailure: true, cleanWhenNotBuilt: true, cleanWhenUnstable: true, deleteDirs: true)
-            }
-        }
     }
 }
