Adding Stages till Clean

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -1,13 +1,41 @@
 pipeline {
     agent any
-
-  stages {
-    stage('Build') {
-      steps {
-        script {
-          sh 'echo "Building Stage"'
+    stages {
+        stage('Build') {
+            steps {
+                script {
+                    sh 'echo "Building Stage"'
+                }
+            }
         }
-      }
-    }
+        stage('Test') {
+            steps {
+                script {
+                    sh 'echo "Testing Stage"'
+                }
+            }
+        }
+        stage('Package') {
+            steps {
+                script {
+                    sh 'echo "Package"'
+                }
+            }
+        }
+        stage('Deploy') {
+            steps {
+                script {
+                    sh 'echo "Deploy"'
+                }
+            }
+        }
+        stage('Clean up') {
+            steps {
+                script {
+                    sh 'echo "Clean up"'
+                }
+            }
+        }
     }
 }
+
