--- a/deploy/ansible.cfg
+++ b/deploy/ansible.cfg
@@ -1,31 +1,11 @@
 [defaults]
-inventory      = /etc/ansible/hosts
-library        = /usr/share/my_modules/
-module_utils   = /usr/share/my_module_utils/
-remote_tmp     = ~/.ansible/tmp
-local_tmp      = ~/.ansible/tmp
-plugin_filters_cfg = /etc/ansible/plugin_filters.yml
-forks          = 5
-poll_interval  = 15
-sudo_user      = root
-ask_sudo_pass = True
-ask_pass      = True
-transport      = smart
-remote_port    = 22
-module_lang    = C
-module_set_locale = False
-deprecation_warnings=False
-
-
-[privilege_escalation]
-become=True
-become_method=sudo
-become_user=root
-become_ask_pass=False
+timeout = 160
+host_key_checking = False
+callback_whitelist = profile_tasks
+log_path=~/ansible.log
+gathering = smart
+ansible_python_interpreter=/usr/bin/python3
+allow_world_readable_tmpfiles=true
 
 [ssh_connection]
-ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s
-control_path = %(directory)s/ansible-ssh-%%h-%%p-%%r
-
-pipelining = True
-
+ssh_args = -o ControlMaster=auto -o ControlPersist=30m -o ControlPath=/tmp/ansible-ssh-%h-%p-%r -o ServerAliveInterval=60 -o ServerAliveCountMax=60 -o ForwardAgent=yes
