adding new tooling nginx

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,24 +1,27 @@
----
-- hosts: all
-  name: Include dynamic variables
-  become: yes
-  tasks:
-    - include_tasks: ../dynamic-assignments/env-vars.yml
-      tags:
-        - always
-        
-#- name: tooling
-#   import_playbook: ../static-assignments/webservers.yml
+/*
+#---
+#- hosts: all
+#  name: Include dynamic variables
+#  become: yes
+#  tasks:
+#    - include_tasks: ../dynamic-assignments/env-vars.yml
+#      tags:
+#        - always
 
-#- name: nginx
-#  import_playbook: ../static-assignments/tooling.yml
+#
+
+- name: tooling
+  import_playbook: ../static-assignments/webservers.yml
+
+- name: nginx
+  import_playbook: ../static-assignments/tooling.yml
 
 #- name: db
 #  import_playbook: ../static-assignments/db-servers.yml
 #  tags:
 #   - database
 
-- name: artifactory
-  import_playbook: ../static-assignments/artifactory.yml
-  tags:
-    - artifactory
+#- name: artifactory
+#  import_playbook: ../static-assignments/artifactory.yml
+#  tags:
+#    - artifactory
