adding new things

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,3 +1,9 @@
----
-- import_playbook: ../static-assignments/webservers.yml
-- import_playbook: ../static-assignments/tooling.yml
+- name: tooling
+  import_playbook: ../static-assignments/uat_webservers.yml
+  tags:
+    - webserver
+
+- name: nginx
+  import_playbook: ../static-assignments/loadbalancers.yml
+  tags:
+    - nginx-lb
