adding db site.yml

--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,9 +1,24 @@
+---
+- hosts: all
+  name: Include dynamic variables
+  become: yes
+  tasks:
+    - include_tasks: ../dynamic-assignments/env-vars.yml
+      tags:
+        - always
+
 - name: tooling
-  import_playbook: ../static-assignments/uat_webservers.yml
-  tags:
-    - webserver
+  import_playbook: ../static-assignments/webservers.yml
 
 - name: nginx
-  import_playbook: ../static-assignments/loadbalancers.yml
+  import_playbook: ../static-assignments/tooling.yml
+
+- name: db
+  import_playbook: ../static-assignments/db-servers.yml
   tags:
-    - nginx-lb
+   - database
+
+#- name: artifactory
+#  import_playbook: ../static-assignments/artifactory.yml
+#  tags:
+#    - artifactory
