adding db site.yml

--- a/deploy/Jenkinsfile
+++ b/deploy/Jenkinsfile
@@ -32,6 +32,7 @@ pipeline {
                 script {
                     def allHosts = [
                         'ubuntu@172.31.8.154',
+                        'ubuntu@172.31.3.198',
                         'ec2-user@172.31.6.165'
                     ]
 
