--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -5,7 +5,7 @@
 172.31.8.154  ansible_ssh_user=ubuntu
 
 [db:vars]
-ansible_user=ec2-user
+ansible_user=ubuntu
 ansbile_python_interpreter=/usr/bin/python
 
 [db]
