--- a/inventory/sit.yml
+++ b/inventory/sit.yml
@@ -1,13 +1,12 @@
 [tooling]
-172.31.5.211  ansible_ssh_user=ec2-user
-
+172.31.6.165  ansible_ssh_user=ec2-user
 
 [nginx]
-172.31.8.66  ansible_ssh_user=ubuntu
+172.31.8.154  ansible_ssh_user=ubuntu
 
 [db:vars]
-ansible_user=ec2-user
-ansible_python_interpreter=/usr/bin/python
+ansible_user=ubuntu
+ansbile_python_interpreter=/usr/bin/python
 
 [db]
-172.31.7.100  ansible_ssh_user=ubuntu
+172.31.3.198 ansible_ssh_user=ubuntu
