--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -7,22 +7,22 @@
       tags:
         - always
 
-- name: tooling
-  import_playbook: ../static-assignments/webservers.yml
-  tags:
-   - webservers
-
-- name: nginx
-  import_playbook: ../static-assignments/loadbalancers.yml
-  tags:
-   - nginx-lb
-
-- name: db
-  import_playbook: ../static-assignments/db-servers.yml
-  tags:
-   - database
-
-#- name: artifactory
-#  import_playbook: ../static-assignments/artifactory.yml
+#- name: tooling
+#  import_playbook: ../static-assignments/webservers.yml
 #  tags:
-#    - artifactory
+#   - webservers
+
+#- name: nginx
+#  import_playbook: ../static-assignments/loadbalancers.yml
+#  tags:
+#   - nginx-lb
+
+#- name: db
+#  import_playbook: ../static-assignments/db-servers.yml
+#  tags:
+#   - database
+
+- name: artifactory
+  import_playbook: ../static-assignments/artifactory.yml
+  tags:
+    - artifactory
