--- a/inventory/dev.yml
+++ b/inventory/dev.yml
@@ -1,12 +1,15 @@
 [tooling]
-172.31.6.165  ansible_ssh_user=ec2-user
+172.31.6.165  ansible_ssh_user='ec2-user'
 
 [nginx]
-172.31.8.154  ansible_ssh_user=ubuntu
+172.31.8.154  ansible_ssh_user='ubuntu'
 
 [db:vars]
-ansible_user=ubuntu
+ansible_user='ubuntu'
 ansbile_python_interpreter=/usr/bin/python
 
 [db]
-172.31.3.198 ansible_ssh_user=ubuntu
+172.31.3.198 ansible_ssh_user='ubuntu'
+
+[artifactory]
+172.31.13.140 ansible_ssh_user='ubuntu'
